[package]
name = "rustasana"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustasana"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
