[package]
name = "rustasana"
version = "0.7.0"
edition = "2021"
authors = ["Lucas Kaique <me@lucaskaique.com.br>"]
description = "A blazingly fast command-line interface for Asana written in Rust"
readme = "README.md"
homepage = "https://github.com/lucaoskaique/rustasana"
repository = "https://github.com/lucaoskaique/rustasana"
license = "MIT"
keywords = ["asana", "cli", "task-management", "productivity", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "rustasana"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
dirs = "5.0"
tempfile = "3.10"
unicode-segmentation = "1.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
